<resources>
    <string name="app_name">Memory Game</string>
    <string name="register">+</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sex_m">M</string>
    <string name="sex_f">F</string>
    <string name="birthday">Birthday</string>
    <string name="sex">Sex</string>
    <string name="valid">Valid</string>
    <string name="cancel">Cancel</string>
    <string name="email_address">Email Address</string>
    <string name="verify_password">Verify Password</string>
    <string name="easy">Easy Mode</string>
    <string name="difficult">Difficult Mode</string>
    <string name="expert">Expert Mode</string>
    <string name="epic">Epic Mode</string>
</resources>